Fix alignment and menu btn

--- a/src/css/components/_products.scss
+++ b/src/css/components/_products.scss
@@ -1,12 +1,13 @@
 .products {
   border-top: solid 1px $grey-light;
   display: flex;
-  text-align: center;
   flex-direction: column;
+  padding: 0 10%;
   position: relative;
+  text-align: center;
   top: 76px;
   width: 100%;
-
+  margin: 0 auto;
 
   &__title {
     color: $brown;
